# serial_command_extreme

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
docs/: 00_serial_console_library_design_intent.md  01_serial_console_library_roadmap.md  02_serial_console_library_implementation_guide.md  03_serial_console_library_handoff.md  architecture_plan.md  code_documentation_policy.md  prior_art_review.md  test_strategy.md
examples/: README.md
reference_only/AdvancedCLI/: CMakeLists.txt  LICENSE  README.md  library.json  library.properties  platformio.ini
reference_only/AdvancedCLI/examples/AliasAndHelp/: AliasAndHelp.ino
reference_only/AdvancedCLI/examples/BasicCommand/: BasicCommand.ino
reference_only/AdvancedCLI/examples/ErrorHandling/: ErrorHandling.ino
reference_only/AdvancedCLI/examples/FlagsAndDefaults/: FlagsAndDefaults.ino
reference_only/AdvancedCLI/examples/FullConfig/: FullConfig.ino
reference_only/AdvancedCLI/examples/HelpDepthAndParsedCount/: HelpDepthAndParsedCount.ino
reference_only/AdvancedCLI/examples/Native/: Native.cpp
reference_only/AdvancedCLI/examples/NativeBatch/: NativeBatch.cpp
reference_only/AdvancedCLI/examples/NativeValidation/: NativeValidation.cpp
reference_only/AdvancedCLI/examples/PersistentArgs/: PersistentArgs.ino
reference_only/AdvancedCLI/examples/PositionalArgs/: PositionalArgs.ino
reference_only/AdvancedCLI/examples/RequiredArg/: RequiredArg.ino
reference_only/AdvancedCLI/examples/SubCommands/: SubCommands.ino
reference_only/AdvancedCLI/examples/Validation/: Validation.ino
reference_only/AdvancedCLI/scripts/: compile-examples.py  coverage.py  require-example.py
reference_only/AdvancedCLI/src/: AdvancedCLI.h
reference_only/AdvancedCLI/src/internal/: AdvancedCLI.cpp  AdvancedCLI.h  acli-argument.cpp  acli-argument.h  acli-command.cpp  acli-command.h  acli-config.h  acli-utils.h
reference_only/AdvancedCLI/test/: test_acli.cpp
reference_only/CommandCatcher/: LICENSE.txt  changelog.md  doxygen.config  keywords.txt  library.properties  readme.md
reference_only/CommandCatcher/docs/: _command_catcher_8cpp.html  _command_catcher_8cpp.js  _command_catcher_8h.html  _command_catcher_8h.js  _command_catcher_8h_source.html  annotated.html  annotated_dup.js  changelog_8md.html  class_command_catcher-members.html  class_command_catcher.html  class_command_catcher.js  class_command_listener-members.html  class_command_listener.html  class_command_listener.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_type.html  globals.html  globals_vars.html  index.html  index.js  md__c_1_2dev_2_arduino_2tries_2libraries_2_command_catcher_2changelog.html  md_changelog.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html  readme_8md.html
reference_only/CommandCatcher/src/: CommandCatcher.cpp  CommandCatcher.h
reference_only/LazySerial/: CHANGELOG  LICENCE  README.md  keywords.txt  library.properties
reference_only/LazySerial/examples/: README.md
reference_only/LazySerial/src/: LazySerial.h
reference_only/PT100_Mesh_Datalogger/: CHANGELOG.md  CMakeLists.txt  DIAGNOSTICS.md  LEAF_E2E_TEST.md  README.md  partitions_n8r2_8mb_ota.csv  sdkconfig  sdkconfig N8R2.defaults  sdkconfig.defaults  sdkconfig.old  sdkconfig_N16R8  sdkconfig_N8R2
reference_only/PT100_Mesh_Datalogger/docs/: code_documentation_policy.md  decision_log_anchor.md  project_intent_anchor.md  project_requirements_constraints_anchor.md  project_roadmap_anchor.md  sd_fram_failure_2026_06_23_analysis.md
reference_only/PT100_Mesh_Datalogger/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_net_config.c  app_net_config.h  app_settings.c  app_settings.h  boot_mode.c  boot_mode.h  calibration.c  calibration.h  console  console_alerts.c  console_alerts.h  console_commands.c  console_commands.h  console_help.c  console_help.h  console_registry.c  console_registry.h  crc16.c  crc16.h  data_csv.c  data_csv.h  data_port.c  data_port.h  display_attention.h  fram_error_log.c  fram_error_log.h  fram_i2c.c  fram_i2c.h  fram_io.h  fram_layout.h  fram_log.c  fram_log.h  fram_spi.c  fram_spi.h  freertos_hooks.c  gpio_buttons.c  gpio_buttons.h  (+67 more)
reference_only/PT100_Mesh_Datalogger/main/alerts/: alert_manager.c  alert_manager.h  alert_ntfy.c  alert_ntfy.h
reference_only/PT100_Mesh_Datalogger/main/diagnostics/: diag_common.c  diag_common.h  diag_fram.c  diag_fram.h  diag_mesh.c  diag_mesh.h  diag_rtc.c  diag_rtc.h  diag_rtd.c  diag_rtd.h  diag_sd.c  diag_sd.h  diag_storage.c  diag_storage.h  diag_wifi.c  diag_wifi.h
reference_only/ParseCommands/: CHANGELOG.md  LICENSE  README.md  keywords.txt  library.json  library.properties
reference_only/SerialCommandCoordinator/: LICENSE  README.md  SerialCommandCoordinator.h  library.properties
reference_only/SerialCommandManager/: LICENSE  README.md  ensure_toolchain.py  generate_coverage.py  library.json  library.properties  platformio.ini
src/: README.md  bsc_args.c  bsc_args.h  bsc_config.h  bsc_console.c  bsc_console.h  bsc_dispatch.c  bsc_dispatch.h  bsc_help.c  bsc_help.h  bsc_help_catalog.c  bsc_help_extended.c  bsc_matcher.c  bsc_matcher.h  bsc_output.c  bsc_output.h  bsc_registry.c  bsc_registry.h  bsc_status.c  bsc_status.h  bsc_string_view.c  bsc_string_view.h  bsc_tokenizer.c  bsc_tokenizer.h  bsc_types.h
src/internal/: bsc_float_parse.c  bsc_float_parse.h  bsc_help_internal.c  bsc_help_internal.h
test/: CMakeLists.txt  README.md  test_bsc_args.c  test_bsc_console.c  test_bsc_console_builtins.c  test_bsc_dispatch.c  test_bsc_help.c  test_bsc_help_catalog.c  test_bsc_help_extended.c  test_bsc_matcher.c  test_bsc_registry.c  test_bsc_tokenizer.c  test_bsc_types.c  test_main.c
test/golden/: command_wifi_set_ssid.txt  commands.txt  extended_command_wifi_set_ssid.txt  extended_group_settings.txt  group_settings.txt  help_index.txt  topic_settings_wifi_set_ssid_security.txt
tools/: check_forbidden_patterns.py
(+73 files in other folders)
